--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -63,10 +63,10 @@
     <system:String x:Key="item66">Не може да се извлече информация от GitHub:</system:String>
     <system:String x:Key="item67">Не сега</system:String>
     <system:String x:Key="item68">Вижте файловете...</system:String>
-    <system:String x:Key="item69">• Версията на играта не е открита •</system:String>
+    <system:String x:Key="item69">Версията на играта не е открита</system:String>
     <system:String x:Key="item70">Открива се версия на играта...</system:String>
     <system:String x:Key="item71">Открита версия на играта: 15 януари 2015 г.</system:String>
-    <system:String x:Key="item72">• Версята на играта не се подържаG •</system:String>
+    <system:String x:Key="item72">Версята на играта не се подържаG</system:String>
     <system:String x:Key="item73">Моля, изчакайте изпълнението на текущите задачи.</system:String>
     <system:String x:Key="item74">Версия на играта открита: 22ри Декември 2016.</system:String>
     <system:String x:Key="item75">Директория</system:String>
@@ -82,13 +82,11 @@
     <system:String x:Key="item92">Добре</system:String>
     <system:String x:Key="item95">Имаше грешка с инсталиране на версия 2015год:</system:String>
     <system:String x:Key="item96">Имаше грешка с инсталиране на версия 2016год:</system:String>
-    <system:String x:Key="item97">Имаше грешка с инсталиране на версия KotKгод:</system:String>
     <system:String x:Key="item99">Разархивиране на файлове за пача...</system:String>
     <system:String x:Key="item100">Изтриване на  .zip файл...</system:String>
     <system:String x:Key="item101">Готово. (Elapsed time:</system:String>
     <system:String x:Key="item102">Файловете за версия 2015 са изтеглени.</system:String>
     <system:String x:Key="item103">Файлове за версия 2016год. са инсталирани.</system:String>
-    <system:String x:Key="item104">Пач файловете за KotK са инсталирани.</system:String>
     <system:String x:Key="item105">Инстариране на последната версия на сървъра...</system:String>
     <system:String x:Key="item107">There was an error installing the latest server:</system:String>
     <system:String x:Key="item108">The latest server has been installed.</system:String>
@@ -101,9 +99,9 @@
     <system:String x:Key="item118">Разархивиране node files...</system:String>
     <system:String x:Key="item120">Моля затворете H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe се използва.\n\nЗатворете всички отворени прозорци на H1Z1.\n\nМожете да използвате бутона по-долу, за да убиете всички процеси на H1Z1.</system:String>
-    <system:String x:Key="item122">Сегашна версия на играта:</system:String>
+    <system:String x:Key="item122">Сегашна версия на играта: 2016</system:String>
     <system:String x:Key="item124">Версия на стартера</system:String>
-    <system:String x:Key="item125">H1Emu © 2024</system:String>
+    <system:String x:Key="item125">Авторско право © 2024 | Проект H1Emu</system:String>
     <system:String x:Key="item126">Главен разработчик</system:String>
     <system:String x:Key="item127">Разработчици</system:String>
     <system:String x:Key="item128">Администратори</system:String>
@@ -120,12 +118,13 @@
     <system:String x:Key="item139">H1Emu Сървъри</system:String>
     <system:String x:Key="item140">Солова Игра</system:String>
     <system:String x:Key="item141">Нов сървър...</system:String>
-    <system:String x:Key="item142">Exception thrown: {0}</system:String>
+    <system:String x:Key="item142">Exception thrown:</system:String>
     <system:String x:Key="item143">Името на сървъра вече съществува в списъка.</system:String>
     <system:String x:Key="item144">Име на сървъра...</system:String>
     <system:String x:Key="item145">IP адрес на сървара...</system:String>
     <system:String x:Key="item146">Не можете да изтрете този вход.</system:String>
     <system:String x:Key="item147">Сигурни ли сте , че искате да изтриете този сървър?</system:String>
+    <system:String x:Key="item148">Exception thrown.</system:String>
     <system:String x:Key="item149">Разархивиране на файлове...</system:String>
     <system:String x:Key="item150">Поправяне...</system:String>
     <system:String x:Key="item151">Името на сървара или IP адреса не са верни.</system:String>
