--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -63,10 +63,10 @@
     <system:String x:Key="item66">No se pudo obtener la información de GitHub:</system:String>
     <system:String x:Key="item67">Ahora no</system:String>
     <system:String x:Key="item68">Ver archivos...</system:String>
-    <system:String x:Key="item69">• Versión De Juego No Detectada •</system:String>
+    <system:String x:Key="item69">Versión De Juego No Detectada</system:String>
     <system:String x:Key="item70">Detectando versión de juego...</system:String>
     <system:String x:Key="item71">Versión de juego detectada: 15th de Enero 2015.</system:String>
-    <system:String x:Key="item72">• Versión de juego no compatible •</system:String>
+    <system:String x:Key="item72">Versión de juego no compatible</system:String>
     <system:String x:Key="item73">Por favor, espera a que se completen las tareas en ejecución.</system:String>
     <system:String x:Key="item74">Version de juego detectada: 22nd de Diciembre 2016.</system:String>
     <system:String x:Key="item75">Carpeta</system:String>
@@ -82,13 +82,11 @@
     <system:String x:Key="item92">OK</system:String>
     <system:String x:Key="item95">Ocurrió un error al instalar el parche 2015:</system:String>
     <system:String x:Key="item96">Ocurrió un error al instalar el parche 2016:</system:String>
-    <system:String x:Key="item97">Ocurrió un error al instalar el parche KotK:</system:String>
     <system:String x:Key="item99">Descomprimiendo archivos del parche...</system:String>
     <system:String x:Key="item100">Eliminando archivo .zip...</system:String>
     <system:String x:Key="item101">Hecho. (Tiempo transcurrido:</system:String>
     <system:String x:Key="item102">El parche para la versión 2015 del juego ha sido instalado.</system:String>
     <system:String x:Key="item103">El parche para la versión 2016 del juego ha sido instalado.</system:String>
-    <system:String x:Key="item104">Se han instalado archivos de parche para KotK.</system:String>
     <system:String x:Key="item105">Instalando última versión del servidor...</system:String>
     <system:String x:Key="item107">Ocurrió un error al instalar la última versión del servidor:</system:String>
     <system:String x:Key="item108">La última versión del servidor ha sido instalada.</system:String>
@@ -101,9 +99,9 @@
     <system:String x:Key="item118">Descomprimiendo archivos de Node...</system:String>
     <system:String x:Key="item120">Por favor cierra H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierre todas las instancias abiertas de H1Z1.\n\nPuede usar el botón a continuación para eliminar todos los procesos de H1Z1.</system:String>
-    <system:String x:Key="item122">Versión De Juego Actual:</system:String>
+    <system:String x:Key="item122">Versión De Juego Actual: 2016</system:String>
     <system:String x:Key="item124">Versión del launcher</system:String>
-    <system:String x:Key="item125">H1Emu © 2024</system:String>
+    <system:String x:Key="item125">Derechos de autor © 2024 | Proyecto H1Emu</system:String>
     <system:String x:Key="item126">Desarrolladores líder</system:String>
     <system:String x:Key="item127">Desarrolladores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
@@ -126,6 +124,7 @@
     <system:String x:Key="item145">IP del servidor...</system:String>
     <system:String x:Key="item146">No se puede eliminar este campo.</system:String>
     <system:String x:Key="item147">¿Seguro que quieres eliminar este servidor?</system:String>
+    <system:String x:Key="item148">Exception thrown.</system:String>
     <system:String x:Key="item149">Descomprimiendo archivos del paquete...</system:String>
     <system:String x:Key="item150">PARCHEANDO...</system:String>
     <system:String x:Key="item151">El nombre o la IP del servidor son inválidos.</system:String>
